--- a/SystemForRecordingWorkingTime/Views/Home/GeneralInformation.cshtml
+++ b/SystemForRecordingWorkingTime/Views/Home/GeneralInformation.cshtml
@@ -11,7 +11,7 @@
 </p>
 @if (Model == null)
     return;
-<table class="table">
+@*<table class="table">
     <thead>
         <tr>
             <th>
@@ -88,4 +88,4 @@
         </tr>
 }
     </tbody>
-</table>
+</table>*@
