--- a/SystemForRecordingWorkingTime/Views/Shared/_Layout.cshtml
+++ b/SystemForRecordingWorkingTime/Views/Shared/_Layout.cshtml
@@ -23,16 +23,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="GeneralInformation">Общая информация</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Заявки</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RequestList">Заявки</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Рабочий календарь</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="WorkingCalendar">Рабочий календарь</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Рабочий график</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="WorkingSchedule">Рабочий график</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Производственный календарь</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ProductionCalendar">Производственный календарь</a>
                         </li>
                     </ul>
                 </div>
