--- a/SystemForRecordingWorkingTime/Views/Home/GeneralInformation.cshtml
+++ b/SystemForRecordingWorkingTime/Views/Home/GeneralInformation.cshtml
@@ -11,7 +11,7 @@
 </p>
 @if (Model == null)
     return;
-@*<table class="table">
+<table class="table">
     <thead>
         <tr>
             <th>
@@ -21,28 +21,10 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Patronymic)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Role)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Phone)
+                @Html.DisplayNameFor(model => model.RoleValue)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DaysWorked)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UnusedVacationDays)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AllUnusedVacationDays)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DaysOff)
             </th>
             <th></th>
         </tr>
@@ -57,35 +39,15 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Patronymic)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Role)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone)
+                @Html.DisplayFor(modelItem => item.RoleValue)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DaysWorked)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UnusedVacationDays)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AllUnusedVacationDays)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DaysOff)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "EditUser", new {id = item.Id})
             </td>
         </tr>
 }
     </tbody>
-</table>*@
+</table>
