--- a/SystemForRecordingWorkingTime/Views/Home/RequestList.cshtml
+++ b/SystemForRecordingWorkingTime/Views/Home/RequestList.cshtml
@@ -8,7 +8,7 @@
 <h1>RequestsList</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="CreateRequest">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -30,6 +30,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Comment)
+            </th>
+            <th>
+                Type
             </th>
             <th></th>
         </tr>
@@ -54,6 +57,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Comment)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.GetType().Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
