--- a/SystemForRecordingWorkingTime/Views/Home/CreateRequest.cshtml
+++ b/SystemForRecordingWorkingTime/Views/Home/CreateRequest.cshtml
@@ -21,44 +21,8 @@
         </form>
         @if (ViewBag.PartialViewName != null)
         {
-            string a = ViewBag.PartialViewName;
-            Console.WriteLine("!!!!!!!!!!!!!!!!!!!!!!! " + a);
-            Html.RenderPartial(a);
+            Html.RenderPartial((string)ViewBag.PartialViewName);
         }
-        @*<form asp-action="CreateRequest">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="RequestStatusValue" class="control-label"></label>
-                <select asp-for="RequestStatusValue" class="form-control"></select>
-                <span asp-validation-for="RequestStatusValue" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ApplicantUserId" class="control-label"></label>
-                <select asp-for="ApplicantUserId" class ="form-control" asp-items="ViewBag.ApplicantUserId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreateDate" class="control-label"></label>
-                <input asp-for="CreateDate" class="form-control" />
-                <span asp-validation-for="CreateDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SubmissionDate" class="control-label"></label>
-                <input asp-for="SubmissionDate" class="form-control" />
-                <span asp-validation-for="SubmissionDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ApprovingUserId" class="control-label"></label>
-                <select asp-for="ApprovingUserId" class ="form-control" asp-items="ViewBag.ApprovingUserId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
-                <span asp-validation-for="Comment" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>*@
     </div>
 </div>
 
