--- a/SystemForRecordingWorkingTime/Views/Shared/_Layout.cshtml
+++ b/SystemForRecordingWorkingTime/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>@ViewData["Title"] - SystemForRecordingWorkingTime</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/SystemForRecordingWorkingTime.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -20,19 +19,19 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="GeneralInformation">Общая информация</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="GeneralInformation">Общая информация</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RequestList">Заявки</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="RequestList">Заявки</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="WorkingCalendar">Рабочий календарь</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="WorkingCalendar">Рабочий календарь</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="WorkingSchedule">Рабочий график</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="WorkingSchedule">Рабочий график</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ProductionCalendar">Производственный календарь</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="ProductionCalendar">Производственный календарь</a>
                         </li>
                     </ul>
                 </div>
@@ -40,14 +39,14 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - SystemForRecordingWorkingTime - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <a asp-action="Logout">Logout</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
