--- a/SystemForRecordingWorkingTime/Views/Home/DayOffAtTheExpenseOfVacationRequest.cshtml
+++ b/SystemForRecordingWorkingTime/Views/Home/DayOffAtTheExpenseOfVacationRequest.cshtml
@@ -1,45 +1,40 @@
-﻿@model SystemForRecordingWorkingTime.Models.DayOffAtTheExpenseOfVacationRequest
+﻿@model SystemForRecordingWorkingTime.Models.CreateDayOffAtTheExpenseOfVacationRequest
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="CreateRequest">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ReplacementUserId" class="control-label"></label>
-                <select asp-for="ReplacementUserId" class ="form-control" asp-items="ViewBag.ReplacementUserId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="RequestStatusValue" class="control-label"></label>
-                <select asp-for="RequestStatusValue" class="form-control"></select>
-                <span asp-validation-for="RequestStatusValue" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ApplicantUserId" class="control-label"></label>
-                <select asp-for="ApplicantUserId" class ="form-control" asp-items="ViewBag.ApplicantUserId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreateDate" class="control-label"></label>
-                <input asp-for="CreateDate" class="form-control" />
-                <span asp-validation-for="CreateDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SubmissionDate" class="control-label"></label>
-                <input asp-for="SubmissionDate" class="form-control" />
-                <span asp-validation-for="SubmissionDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ApprovingUserId" class="control-label"></label>
-                <select asp-for="ApprovingUserId" class ="form-control" asp-items="ViewBag.ApprovingUserId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
-                <span asp-validation-for="Comment" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+<form name="mainForm"
+asp-action="@(ViewBag.ActionName)DayOffAtTheExpenseOfVacationRequest" 
+asp-route-id="@ViewBag.RequestId">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="form-group">
+        <label asp-for="ApprovingUserEmail" class="control-label"></label>
+        <input asp-for="ApprovingUserEmail" class="form-control" />
+        <span asp-validation-for="ApprovingUserEmail" class="text-danger"></span>
     </div>
-</div>
+    <div class="form-group">
+        <label asp-for="ReplacementUserEmail" class="control-label"></label>
+        <input asp-for="ReplacementUserEmail" class="form-control" />
+        <span asp-validation-for="ReplacementUserEmail" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <input name="dateValue" type="date" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="StatedDatesList" class="control-label"></label>
+        <input id="datesList" asp-for="StatedDatesList" class="form-control" />
+        <span asp-validation-for="StatedDatesList" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <input type="button" value="AddDate" onclick="return addStatedDate();" class="btn btn-primary" />
+    </div>
+    <div class="form-group">
+        <label asp-for="Comment" class="control-label"></label>
+        <input asp-for="Comment" class="form-control" />
+        <span asp-validation-for="Comment" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Create" class="btn btn-primary" />
+    </div>
+</form>
 
+<script>
+    let dates = [];
+</script>
