--- a/SystemForRecordingWorkingTime/Views/Home/EditUser.cshtml
+++ b/SystemForRecordingWorkingTime/Views/Home/EditUser.cshtml
@@ -1,70 +1,68 @@
-﻿@model SystemForRecordingWorkingTime.Models.User
+﻿@model SystemForRecordingWorkingTime.Models.EditUser
 
-@{
-    ViewData["Title"] = "EditUser";
-}
-
-@if(Model == null)
-{
-    <h1>(Model == null)</h1>
-    return;
-}
-
-<h1>EditUser</h1>
-
-<h4>User</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="EditUser">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Surname" class="control-label"></label>
-                <input asp-for="Surname" value="@Model.Surname" class="form-control" />
-                <span asp-validation-for="Surname" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" value="@Model.Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Patronymic" class="control-label"></label>
-                <input asp-for="Patronymic" value="@Model.Patronymic" class="form-control" />
-                <span asp-validation-for="Patronymic" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RoleValue" class="control-label"></label>
-                <select asp-for="RoleValue" asp-items="Html.GetEnumSelectList<User.Role>()" class="form-control">@Model.RoleValue</select>
-                <span asp-validation-for="RoleValue" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Phone" class="control-label"></label>
-                <input asp-for="Phone" value="@Model.Phone" class="form-control" />
-                <span asp-validation-for="Phone" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+<div class="col-3">
+    <form asp-action="EditUser">
+        <input type="hidden" asp-for="Id" />
+        <div class="form-group">
+            <input readonly="readonly" value="@ViewBag.User.Surname" class="form-control" />
+        </div>
+        <div class="form-group">
+            <input readonly="readonly" value="@ViewBag.User.Name" class="form-control" />
+        </div>
+        <div class="form-group">
+            <input readonly="readonly" value="@ViewBag.User.Patronymic" class="form-control" />
+        </div>
+        <div class="form-group">
+            <select disabled="disabled" asp-items="Html.GetEnumSelectList<UserRole>()" class="form-control">@ViewBag.User.Role</select>
+        </div>
+        <div class="form-group">
+                @if(ViewBag.CurrentUser != null && ViewBag.CurrentUser == true) 
+                {
+                    <label asp-for="Phone" class="control-label"></label>
+                    <input asp-for="Phone"  value="@ViewBag.User.Phone" class="form-control" />
+                    <span asp-validation-for="Phone" class="text-danger"></span>
+                } 
+                else
+                {
+                    <input readonly="readonly" value="@ViewBag.User.Phone" class="form-control" />
+                }
+        </div>
+        <div class="form-group">
+            @if(ViewBag.CurrentUser != null && ViewBag.CurrentUser == true) 
+            {
                 <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" value="@Model.Email" class="form-control" />
+                <input asp-for="Email" value="@ViewBag.User.Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" value="@Model.Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+            }
+            else
+            {
+                <input readonly="readonly" value="@ViewBag.User.Email" class="form-control" />
+            }
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Edit" class="btn btn-primary" />
+        </div>
+    </form>
+    <table>
+        <tr>
+            <td>DaysWorked</td>
+            <td>@ViewBag.User.DaysWorked</td>
+        </tr>
+        <tr>
+            <td>UnusedVacationDays</td>
+            <td>@ViewBag.User.UnusedVacationDays</td>
+        </tr>
+        <tr>
+            <td>AllUnusedVacationDays</td>
+            <td>@ViewBag.User.AllUnusedVacationDays</td>
+        </tr>
+        <tr>
+            <td>DaysOff</td>
+            <td>@ViewBag.User.DaysOff</td>
+        </tr>
+        <tr>
+            <td>RequestCountByStatus</td>
+            <td>@(((SystemForRecordingWorkingTime.Models.User)ViewBag.User).RequestCountByStatus.Count)</td>
+        </tr>
+    </table>
 </div>
-
-<div>
-    <a asp-action="GeneralInformation">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
