--- a/SystemForRecordingWorkingTime/Views/Home/GeneralInformation.cshtml
+++ b/SystemForRecordingWorkingTime/Views/Home/GeneralInformation.cshtml
@@ -1,17 +1,20 @@
 ﻿@model IEnumerable<SystemForRecordingWorkingTime.Models.User>
 
 @{
-    ViewData["Title"] = "GeneralInformation";
+    ViewData["Title"] = "User information";
 }
 
-<h1>GeneralInformation</h1>
+<h1>User information</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if(User.IsInRole("Administrator"))
+{
+    <p>
+        <a asp-action="CreateUser">Create new</a>
+    </p>
+}
 @if (Model == null)
     return;
-<div class="row">
+<div class="row flex-nowrap">
     <div class="col">
     <table class="table">
         <thead>
@@ -23,7 +26,7 @@
                     @Html.DisplayNameFor(model => model.Name)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.RoleValue)
+                    @Html.DisplayNameFor(model => model.Role)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Email)
@@ -41,21 +44,25 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.RoleValue)
+                    @Html.DisplayFor(modelItem => item.Role)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "EditUser", new {id = item.Id})
+                    @Html.ActionLink("Edit", "GeneralInformation", new {email = item.Email})
                 </td>
             </tr>
             }
         </tbody>
     </table>
     </div>
-    @if (ViewBag.User != null)
+    @if(User.IsInRole("Administrator"))
     {
-        Html.RenderPartial("UserDetails", (User)ViewBag.User);
+        @await Html.PartialAsync("AdministratorEditUser", new AdministratorEditUser(ViewBag.User));
+    }
+    else
+    {
+        @await Html.PartialAsync("EditUser", new EditUser(ViewBag.User));
     }
 </div>
