--- a/SystemForRecordingWorkingTime/Views/Home/UserDetails.cshtml
+++ b/SystemForRecordingWorkingTime/Views/Home/UserDetails.cshtml
@@ -21,10 +21,10 @@
             @Html.DisplayFor(model => model.Patronymic)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RoleValue)
+            @Html.DisplayNameFor(model => model.Role)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RoleValue)
+            @Html.DisplayFor(model => model.Role)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Phone)
